--- a/rotas/src/index.html
+++ b/rotas/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Rotas</title>
-  <base href="/">
+  <base href="/"> 
+  <!-- quando renderiza ou f5  de atualiza a page ele aponta pra nada do base hrfe="/" precisa disso se não explde  -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
